--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
+**/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Dependency directories
+frontend/node_modules/
+backend/node_modules/
+
+# Output directories
+frontend/build/
+frontend/dist/
+backend/dist/
+
+# Environments
+**/.env
+
+# Compiled files
+*.tsbuildinfo
+
+# IDE and system files
+.DS_Store
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+# Images and other large files
+public/assets/images/
+frontend/public/assets/images/
+backend/public/assets/images/
+
+# Misc
+*.pem
