--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16' # Cambia esto a la versión de Node que usas
+        node-version: '20.18.0' # Usando la versión 20.18.0 de Node.js
 
     # Paso 3: Instalar dependencias y construir el frontend
     - name: Install and Build Frontend
@@ -36,7 +36,7 @@ jobs:
     # Paso 5: Crear archivo temporal para la clave PEM de EC2 desde GitHub Secret
     - name: Add EC2 PEM Key
       env:
-        EC2_PEM_KEY: ${{ secrets.SMILEYCREATIONS_PEM }} # Define este secreto en GitHub
+        EC2_PEM_KEY: ${{ secrets.SMILEYCREATIONS_PEM }}
       run: |
         echo "$EC2_PEM_KEY" > ec2_key.pem
         chmod 400 ec2_key.pem
@@ -64,7 +64,7 @@ jobs:
 
           # Navegar al backend y reiniciar con PM2
           cd /var/www/backend
-          pm2 restart all || pm2 start server.js --name "backend"
+          pm2 restart backend || pm2 start server.js --name "backend"
 
           # Reiniciar NGINX para aplicar cambios
           sudo systemctl restart nginx
