--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "amazon-cognito-identity-js": "^6.3.12",
+        "aws-jwt-verify": "^4.0.1",
         "aws-sdk": "^2.1691.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
