--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Paso 2: Crear archivo temporal para la clave PEM de EC2 desde GitHub Secret
+    # Paso 2: Configurar Node.js en el entorno de GitHub Actions
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20.18.0' # Usando la versión 20.18.0 de Node.js
+
+    # Paso 3: Instalar dependencias y construir el frontend en GitHub Actions
+    - name: Install and Build Frontend
+      working-directory: ./src/frontend
+      run: |
+        npm install
+        CI=false npm run build
+
+    # Paso 4: Crear archivo temporal para la clave PEM de EC2 desde GitHub Secret
     - name: Add EC2 PEM Key
       env:
         EC2_PEM_KEY: ${{ secrets.SMILEYCREATIONS_PEM }}
@@ -22,7 +35,7 @@ jobs:
         echo "$EC2_PEM_KEY" > ec2_key.pem
         chmod 400 ec2_key.pem
 
-    # Paso 3: Copiar el backend y solo el build del frontend a la instancia EC2
+    # Paso 5: Copiar el backend y solo el build del frontend a la instancia EC2
     - name: Deploy Application to EC2
       run: |
         # Crear directorios en EC2 y transferir archivos
@@ -34,7 +47,7 @@ jobs:
         # Copiar solo el contenido del build del frontend
         scp -i ec2_key.pem -o StrictHostKeyChecking=no -r ./src/frontend/build/* ec2-user@${{ secrets.EC2_HOST }}:/var/www/frontend_deploy
     
-    # Paso 4: Conectar a la instancia EC2 y ejecutar la instalación en el backend
+    # Paso 6: Conectar a la instancia EC2 y ejecutar la instalación en el backend
     - name: Install Backend Dependencies on EC2
       run: |
         ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
@@ -43,7 +56,7 @@ jobs:
           npm install --production
         EOF
 
-    # Paso 5: Conectar a la instancia EC2 y reiniciar el backend
+    # Paso 7: Conectar a la instancia EC2 y reiniciar el backend
     - name: Restart Backend Service on EC2
       run: |
         ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
@@ -57,13 +70,13 @@ jobs:
           pm2 restart backend || pm2 start server.js --name "backend"
         EOF
 
-    # Paso 6: Reiniciar NGINX para servir el nuevo build del frontend
+    # Paso 8: Reiniciar NGINX para servir el nuevo build del frontend
     - name: Restart NGINX
       run: |
         ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
           sudo systemctl restart nginx
         EOF
 
-    # Paso 7: Eliminar el archivo PEM temporal para seguridad
+    # Paso 9: Eliminar el archivo PEM temporal para seguridad
     - name: Clean Up
       run: rm -f ec2_key.pem
