--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,27 @@ jobs:
 
         # Copiar solo el contenido del build del frontend
         scp -i ec2_key.pem -o StrictHostKeyChecking=no -r ./src/frontend/build/* ec2-user@${{ secrets.EC2_HOST }}:/var/www/frontend_deploy
-    
-    # Paso 6: Conectar a la instancia EC2 y ejecutar la instalación en el backend
+
+    # Paso 6: Crear el archivo .env en el servidor EC2 usando los secretos de GitHub
+    - name: Add environment variables on EC2
+      run: |
+        ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> /var/www/backend/.env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> /var/www/backend/.env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> /var/www/backend/.env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> /var/www/backend/.env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> /var/www/backend/.env
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> /var/www/backend/.env
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> /var/www/backend/.env
+          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> /var/www/backend/.env
+          echo "S3_MAIN_BUCKET_NAME=${{ secrets.S3_MAIN_BUCKET_NAME }}" >> /var/www/backend/.env
+          echo "S3_ADDITIONAL_BUCKET_NAME=${{ secrets.S3_ADDITIONAL_BUCKET_NAME }}" >> /var/www/backend/.env
+          echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> /var/www/backend/.env
+          echo "COGNITO_USER_POOL=${{ secrets.COGNITO_USER_POOL }}" >> /var/www/backend/.env
+          echo "COGNITO_CLIENT_ID=${{ secrets.COGNITO_CLIENT_ID }}" >> /var/www/backend/.env
+        EOF
+
+    # Paso 7: Conectar a la instancia EC2 y ejecutar la instalación en el backend
     - name: Install Backend Dependencies on EC2
       run: |
         ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
@@ -56,7 +75,7 @@ jobs:
           npm install --production
         EOF
 
-    # Paso 7: Conectar a la instancia EC2 y reiniciar el backend
+    # Paso 8: Conectar a la instancia EC2 y reiniciar el backend
     - name: Restart Backend Service on EC2
       run: |
         ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
@@ -70,13 +89,13 @@ jobs:
           pm2 restart backend || pm2 start server.js --name "backend"
         EOF
 
-    # Paso 8: Reiniciar NGINX para servir el nuevo build del frontend
+    # Paso 9: Reiniciar NGINX para servir el nuevo build del frontend
     - name: Restart NGINX
       run: |
         ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
           sudo systemctl restart nginx
         EOF
 
-    # Paso 9: Eliminar el archivo PEM temporal para seguridad
+    # Paso 10: Eliminar el archivo PEM temporal para seguridad
     - name: Clean Up
       run: rm -f ec2_key.pem
