adding login and auth config

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "concurrently": "^6.2.1"
   },
   "dependencies": {
-    "aws-jwt-verify": "^4.0.1"
+    "aws-jwt-verify": "^4.0.1",
+    "cookieparser": "^0.1.0"
   }
 }
