--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,13 @@ jobs:
         npm install
         CI=false npm run build
 
+    # Paso 3b: Instalar dependencias y construir el frontend de login
+    - name: Install and Build Login Frontend
+      working-directory: ./src/login
+      run: |
+        npm install
+        CI=false npm run build
+
     # Paso 4: Crear archivo temporal para la clave PEM de EC2 desde GitHub Secret
     - name: Add EC2 PEM Key
       env:
@@ -47,6 +54,9 @@ jobs:
         # Copiar solo el contenido del build del frontend
         scp -i ec2_key.pem -o StrictHostKeyChecking=no -r ./src/frontend/build/* ec2-user@${{ secrets.EC2_HOST }}:/var/www/frontend_deploy
 
+        # Copiar solo el contenido del build del login frontend
+        scp -i ec2_key.pem -o StrictHostKeyChecking=no -r ./src/login/build/* ec2-user@${{ secrets.EC2_HOST }}:/var/www/login_deploy
+
     # Paso 6: Crear el archivo .env en el servidor EC2 usando los secretos de GitHub
     - name: Add environment variables on EC2
       run: |
@@ -64,6 +74,7 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> /var/www/backend/.env
           echo "COGNITO_USER_POOL=${{ secrets.COGNITO_USER_POOL }}" >> /var/www/backend/.env
           echo "COGNITO_CLIENT_ID=${{ secrets.COGNITO_CLIENT_ID }}" >> /var/www/backend/.env
+          echo "JWT_SECRET"=${{ secrets.JWT_SECRET }}" >> /var/www/backend/.env
         EOF
 
     # Paso 7: Conectar a la instancia EC2 y ejecutar la instalación en el backend
