--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -13,9 +13,12 @@
         "amazon-cognito-identity-js": "^6.3.12",
         "aws-jwt-verify": "^4.0.1",
         "aws-sdk": "^2.1691.0",
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.17.1",
+        "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
